--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
     "next": "14.2.4",
+    "path": "^0.12.7",
     "react": "^18",
     "react-dom": "^18"
   },
